--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,11 +10,12 @@ $desktop: 1024px;
 
 // Colores
 $negro: #000000;
-$amarillo: #E08709;;
+$naranja: #f7a027;;
 $verde: #71B100;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
+$grisclaro: #585858;
 
 $separacion: 5rem;
 
