Actualización de estilos y contenido

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,5 +8,8 @@
 /**UI**/
 
 @import 'layout/header';
+@import 'layout/nosotros';
 @import 'layout/footer';
 @import 'layout/navegacion';
+@import 'layout/iconos';
+@import 'layout/proyectos';
