--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,7 +10,7 @@ $desktop: 1024px;
 
 // Colores
 $negro: #000000;
-$naranja: #f7a027;;
+$naranja: #f79627;;
 $verde: #71B100;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
