--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -15,15 +15,32 @@
             position: absolute;
             inset: 0;
             background-color: rgba(40, 40, 40, 0.75); // gris oscuro translúcido
+            
         }
 
         .contenido-header {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             position: relative;
             z-index: 1;
+
+            @include tablet {
+            min-height: 45rem;
+            }
+
+            h1{
+                text-align: left;
+                color: $blanco;
+                font-weight: $bold;
+                line-height: 1;
+                max-width: 65rem;
+                text-transform: uppercase;
+            }
         }
 
         @include tablet {
-            min-height: 40rem;
+            min-height: 45rem;
         }
     }
 }
